Refactored PrometheusMapperConfiguration to use beans for all mapperConfigs